deployment/postgres-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  name:  postgres-deployment
  #namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: pg-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: postgres
          imagePullPolicy: IfNotPresent
          image: postgres
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: pg-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          ports:
          - containerPort: 5432
